...
        let containerView: UIView = UIView()
        
        let editbutton = UIButton()
        let likeButton = UIButton()
        let shareButton = UIButton()
        
        editbutton.setImage(#imageLiteral(resourceName: "edit"), for: .normal)
        likeButton.setImage(#imageLiteral(resourceName: "heart"), for: .normal)
        shareButton.setImage(#imageLiteral(resourceName: "next"), for: .normal)
    
        let buttonsArray = [editbutton, likeButton, shareButton]
        
        buttonsArray.forEach({
...
